--- a/javafx/progetto_compiti_vacanze/src/main/resources/com/example/progetto_compiti_vacanze/guessNumber.fxml
+++ b/javafx/progetto_compiti_vacanze/src/main/resources/com/example/progetto_compiti_vacanze/guessNumber.fxml
@@ -26,7 +26,7 @@
             </font>
         </Text>
         <Button layoutX="521.0" layoutY="181.0" mnemonicParsing="false" onAction="#reset" prefHeight="40.0" prefWidth="53.0" text="Reset" />
-        <Text fx:id="guessCounterText" layoutX="259.0" layoutY="381.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Guesses: 0">
+        <Text fx:id="guessCounterText" layoutY="375.0" stroke="RED" strokeWidth="0.0" text="Guesses: 0" textAlignment="CENTER" textOrigin="CENTER" wrappingWidth="600.0" AnchorPane.leftAnchor="0.0">
             <font>
                 <Font size="15.0" />
             </font>
