--- a/javafx/progetto_compiti_vacanze/src/main/resources/com/example/progetto_compiti_vacanze/toDoList.fxml
+++ b/javafx/progetto_compiti_vacanze/src/main/resources/com/example/progetto_compiti_vacanze/toDoList.fxml
@@ -11,9 +11,12 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: lightblue;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.progetto_compiti_vacanze.ToDoList">
     <children>
-        <ListView fx:id="ListOfCommits" layoutX="1.0" layoutY="36.0" prefHeight="278.0" prefWidth="300.0" style="-fx-background-color: #C4C4C4;" />
-        <TextField fx:id="commit" layoutX="332.0" layoutY="37.0" prefHeight="26.0" prefWidth="261.0" promptText="Your commit" style="-fx-background-color: white;" />
-        <Button layoutX="415.0" layoutY="121.0" mnemonicParsing="false" onMouseClicked="#addName" prefHeight="54.0" prefWidth="95.0" style="-fx-background-color: blue;" text="Add" textFill="WHITE">
+        <ListView fx:id="ListOfCommits" fixedCellSize="0.0" layoutX="1.0" layoutY="36.0" prefHeight="278.0" prefWidth="300.0" style="-fx-background-color: #C4C4C4;" />
+        <TextField fx:id="commit" layoutX="314.0" layoutY="72.0" prefHeight="54.0" prefWidth="286.0" promptText="Your commit" style="-fx-background-color: white;">
+         <font>
+            <Font size="20.0" />
+         </font></TextField>
+        <Button layoutX="415.0" layoutY="259.0" mnemonicParsing="false" onMouseClicked="#addName" prefHeight="54.0" prefWidth="95.0" style="-fx-background-color: blue;" text="Add" textFill="WHITE">
             <font>
                 <Font name="System Bold" size="16.0" />
             </font></Button>
@@ -21,7 +24,7 @@
             <font>
                 <Font name="System Bold" size="16.0" />
             </font></Button>
-        <DatePicker fx:id="date" layoutX="332.0" layoutY="63.0" prefHeight="26.0" prefWidth="262.0" promptText="Your date" style="-fx-background-color: lightcyan;" />
+        <DatePicker fx:id="date" layoutX="314.0" layoutY="127.0" prefHeight="54.0" prefWidth="285.0" promptText="Your date" style="-fx-background-color: lightcyan;" />
         <Label alignment="CENTER" layoutY="-5.0" prefHeight="44.0" prefWidth="300.0" style="-fx-background-color: #C4C4C4;" text="TO-DO-LIST">
             <font>
                 <Font name="System Bold" size="19.0" />
