--- a/javafx/MarkovGPT/src/main/resources/com/example/markovgpt/secondchat.fxml
+++ b/javafx/MarkovGPT/src/main/resources/com/example/markovgpt/secondchat.fxml
@@ -71,5 +71,10 @@
                 <Font size="18.0" />
             </font>
         </Button>
+      <Button layoutX="745.0" layoutY="496.0" mnemonicParsing="false" onAction="#filechooser" prefHeight="38.0" prefWidth="175.0" style="-fx-background-color: #6e6e80;" text="Select a file" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font>
+      </Button>
     </children>
 </AnchorPane>
